[tool.poetry]
name = "hangman-cli"
version = "0.1.0"
description = ""
authors = ["dgeison <dgeison.peixoto@gmail.com>"]
readme = "README.md"
packages = [{include = "hangman_cli"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
